# termhack-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
include/termhack/: engine.h  random.h  types.h
src/: engine.cpp
src/detail/: dictionary.hpp  game_state.cpp  game_state.hpp  interaction_logic.cpp  interaction_logic.hpp  symbol_manipulator.cpp  symbol_manipulator.hpp  terminal_buffer.cpp  terminal_buffer.hpp  word_repository.cpp  word_repository.hpp
tests/: CMakeLists.txt  game_state_test.cpp  sample_test.cpp  symbol_manipulator_test.cpp  terminal_buffer_test.cpp  word_repository_test.cpp
